--- a/app/src/main/res/layout/activity_flute_dog.xml
+++ b/app/src/main/res/layout/activity_flute_dog.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="horizontal"
-        tools:context="com.jmajyo.titirify.FluteDogActivity"
+        tools:context="com.jmajyo.titirify.activities.FluteDogActivity"
         android:background="#111111"
         android:layout_weight="1"
 
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="2"
-        tools:context="com.jmajyo.titirify.FluteDogActivity"
+        tools:context="com.jmajyo.titirify.activities.FluteDogActivity"
         android:layout_weight="5"
         android:layout_marginTop="10dp"
         >
