some visual upgrades

--- a/app/src/main/res/layout/activity_profit.xml
+++ b/app/src/main/res/layout/activity_profit.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jmajyo.titirify.activities.ProfitActivity">
+    tools:context="com.jmajyo.titirify.activities.ProfitActivity"
+    android:background="#333333">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
